--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		function locSuccess(position) {
 			document.getElementById("results").innerText = JSON.stringify(position);
 		}
+		function locError(error) {
+			console.error(error);
+		}
 		if (navigator.geolocation) {
 			navigator.geolocation.getCurrentPosition(locSuccess, locError, {enableHighAccuracy: true, maximumAge: 0, timeout: 10000});
 		}
