--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 
 <head>
 	<title>Geolocation test</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.min.css">
+	<style>
+		#map {
+			height: 300px;
+		}
+	</style>
 </head>
 
 <body>
@@ -11,6 +17,10 @@
 		Longitude: <span id="longitude"></span><br/>
 		Accuracy: <span id="accuracy"></span>
 	</p>
+	<div id="map"></div>
+	<script type="module"> 
+		import leaflet from "https://cdn.jsdelivr.net/npm/leaflet@1.9.3/+esm";
+	</script>
 	<script>
 		function locSuccess(position) {
 			const fields = ['latitude','longitude','accuracy'];
@@ -18,6 +28,16 @@
 			fields.forEach(field => {
 				document.getElementById(field).innerHTML = position.coords[field];
 			});
+
+			var map = leaflet.map('map').setView([position.coords.latitude, position.coords.longitude], 13);
+
+			L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+				attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+			}).addTo(map);
+
+			L.marker([position.coords.latitude, position.coords.longitude]).addTo(map)
+				.bindPopup('Your location')
+				.openPopup();
 		}
 		function locError(error) {
 			console.error(error);
