--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
 	<title>Geolocation test</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.min.css">
 	<style>
 		#map {
