--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.min.css">
 	<style>
+		main {
+			height: 100px;
+		}
 		#map {
-			height: 600px;
+			height: calc(100vh - 100px);
 		}
 	</style>
 </head>
 
 <body>
-	<p>Geolocation test</p>
-	<p id="results">
-		Latitude: <span id="latitude"></span><br/>
-		Longitude: <span id="longitude"></span><br/>
-		Accuracy: <span id="accuracy"></span>
-	</p>
+	<main>
+		<p>Geolocation test</p>
+		<p id="results">
+			Latitude: <span id="latitude"></span><br/>
+			Longitude: <span id="longitude"></span><br/>
+			Accuracy: <span id="accuracy"></span>
+		</p>
+	</main>
 	<div id="map"></div>
 	<script type="module"> 
 		import leaflet from "https://cdn.jsdelivr.net/npm/leaflet@1.9.3/+esm";
