--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			Longitude: <span id="longitude"></span><br />
 			Accuracy: <span id="accuracy"></span>
 		</p>
-		<button type="button" id="btnGetLoc" onclick="getLocation">Fetch Location</button>
+		<button type="button" id="btnGetLoc" onclick="getLocation()">Fetch Location</button>
 	</main>
 	<div id="map"></div>
 	<script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.min.js"></script>
